--- a/package.json
+++ b/package.json
@@ -27,11 +27,7 @@
     "cucumber": "^4.2.1",
     "eslint": "^5.3.0",
     "kuzzle-sdk": "^5.0.12",
-    "mocha": "^5.2.0",
-    "nexpect": "^0.5.0",
-    "should": "^13.2.3",
-    "should-sinon": "0.0.6",
-    "sinon": "^6.1.4"
+    "nexpect": "^0.5.0"
   },
   "dependencies": {
     "passport": "^0.4.0",
