--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   kuzzle:
-    image: kuzzleio/development:${KUZZLE_DOCKER_TAG:-latest}
+    image: kuzzleio/plugin-dev:${KUZZLE_DOCKER_TAG:-latest}
     command: /run-dev.sh
     volumes:
       - "./run-dev.sh:/run-dev.sh"
@@ -27,6 +27,8 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.4.1
+    ulimits:
+      nofile: 65536
     environment:
       - cluster.name=kuzzle
       # disable xpack
