--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,4 @@
 {
   "name": "kuzzle-core-plugin-boilerplate",
-  "version": "1.2.0",
-  "threadable": false,
-  "kuzzleVersion": "^1.1.x"
+  "kuzzleVersion": ">=1.4.2 <2.0.0"
 }
