--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "npm run --silent lint && npm run functional-testing",
-    "lint": "eslint --max-warnings=0 ./lib ./test",
-    "functional-testing": "bash run-features.sh",
-    "unit-testing": "istanbul cover _mocha"
+    "lint": "eslint --max-warnings=0 ./lib ./features",
+    "functional-testing": "bash run-features.sh"
   },
   "repository": {
     "type": "git",
@@ -25,17 +24,13 @@
   },
   "homepage": "https://github.com/kuzzleio/kuzzle-core-plugin-boilerplate#readme",
   "devDependencies": {
-    "eslint": "^3.6.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.1.0",
-    "should": "^11.1.0",
-    "should-sinon": "0.0.5",
     "cucumber": "^4.2.1",
-    "nexpect": "^0.5.0",
-    "sinon": "^2.3.2"
+    "eslint": "^5.3.0",
+    "kuzzle-sdk": "^5.0.12",
+    "nexpect": "^0.5.0"
   },
   "dependencies": {
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
 }
