--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,5 +55,8 @@
     "node": true,
     "es6": true
   },
-  "extends": "eslint:recommended"
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 2017
+  }
 }
