--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: kuzzleio/plugin-dev:${KUZZLE_DOCKER_TAG:-latest}
     command: /run-dev.sh
     volumes:
-      - "./run-dev.sh:/run-dev.sh"
-      - "./install-plugins.sh:/install-plugins.sh"
-      - "./pm2.json:/config/pm2.json"
-      - "..:/var/app/plugins/enabled/${PLUGIN_NAME:-kuzzle-core-plugin-boilerplate}"
+      - "./docker/run-dev.sh:/run-dev.sh"
+      - "./docker/install-plugins.sh:/install-plugins.sh"
+      - "./docker/pm2.json:/config/pm2.json"
+      - ".:/var/app/plugins/enabled/${PLUGIN_NAME:-kuzzle-core-plugin-boilerplate}"
     cap_add:
       - SYS_PTRACE
     ulimits:
