--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   kuzzle:
-    image: kuzzleio/plugin-dev:1
+    image: kuzzleio/plugin-dev:2
     command: /run-dev.sh
     volumes:
       - "./docker/run-dev.sh:/run-dev.sh"
@@ -22,7 +22,7 @@ services:
       - "9229:9229"
       - "7512:7512"
     environment:
-      - kuzzle_services__db__client__host=http://elasticsearch:9200
+      - kuzzle_services__storageEngine__client__node=http://elasticsearch:9200
       - kuzzle_services__internalCache__node__host=redis
       - kuzzle_services__memoryStorage__node__host=redis
       - NODE_ENV=development
@@ -32,9 +32,13 @@ services:
     image: redis:5
 
   elasticsearch:
-    image: kuzzleio/elasticsearch:5.6.10
+    image: kuzzleio/elasticsearch:7.3.0
+    ports:
+      - "9200:9200"
     ulimits:
       nofile: 65536
     environment:
-      - cluster.name=kuzzle
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - node.name=alyx
+      - cluster.name=kuzzle
+      - discovery.type=single-node
