--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kuzzle-core-plugin-boilerplate",
   "author": "The Kuzzle Team <support@kuzzle.io>",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "Kuzzle plugin boilerplate template",
   "main": "lib/index.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "devDependencies": {
     "cucumber": "^5.1.0",
     "eslint": "^5.16.0",
-    "kuzzle-sdk": "^6.2.2",
+    "kuzzle-sdk": "^7.0.0-beta.1",
     "nexpect": "^0.6.0"
   },
   "dependencies": {
