--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,9 @@ version: '3'
 services:
   kuzzle:
     image: kuzzleio/plugin-dev:2
-    command: /run-dev.sh
+    command: bash -c "prepare && /run-dev.sh"
     volumes:
       - "./docker/run-dev.sh:/run-dev.sh"
-      - "./docker/install-plugins.sh:/install-plugins.sh"
-      - "./docker/pm2.json:/config/pm2.json"
       - ".:/var/app/plugins/enabled/${PLUGIN_NAME:-kuzzle-core-plugin-boilerplate}"
     cap_add:
       - SYS_PTRACE
@@ -27,18 +25,12 @@ services:
       - kuzzle_services__memoryStorage__node__host=redis
       - NODE_ENV=development
       - DEBUG=kuzzle:plugins
+      - PLUGIN_NAME=${PLUGIN_NAME:-kuzzle-core-plugin-boilerplate}
 
   redis:
     image: redis:5
 
   elasticsearch:
-    image: kuzzleio/elasticsearch:7.3.0
+    image: kuzzleio/elasticsearch:7
     ports:
       - "9200:9200"
-    ulimits:
-      nofile: 65536
-    environment:
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - node.name=alyx
-      - cluster.name=kuzzle
-      - discovery.type=single-node
